gerudian ideas - dalr people

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -5687,3 +5687,315 @@
  Z54_idea_6_3_desc:0 "Karakhanbar 6 desc"
  Z54_idea_7_3:0 "Deepwoods wood manufactories"
  Z54_idea_7_3_desc:0 "Karakhanbar 7 desc"
+
+###########################################################
+##################        Gerudian       ##################
+###########################################################
+
+ Z08_ideas_2:0 "Bjarnrik Ideas 2"
+ Z08_ideas_2_start:0 "Bjarnrik Traditions 2"
+ Z08_ideas_2_bonus:0 "Bjarnrik Ambition 2"
+ Z08_idea_1_2:0 "Land of Fjords"
+ Z08_idea_1_2_desc:0 "Bjarnrik 1 desc"
+ Z08_idea_2_2:0 "Freemen Fervour"
+ Z08_idea_2_2_desc:0 "Bjarnrik 2 desc"
+ Z08_idea_3_2:0 "Valkyries and Skalds"
+ Z08_idea_3_2_desc:0 "Bjarnrik 3 desc"
+ Z08_idea_4_2:0 "Tithes and Tributes"
+ Z08_idea_4_2_desc:0 "Bjarnrik 4 desc"
+ Z08_idea_5_2:0 "End of Raiding"
+ Z08_idea_5_2_desc:0 "Bjarnrik 5 desc"
+ Z08_idea_6_2:0 "Merchantmen"
+ Z08_idea_6_2_desc:0 "Bjarnrik 6 desc"
+ Z08_idea_7_2:0 "Blackpowder Berserkers"
+ Z08_idea_7_2_desc:0 "Bjarnrik 7 desc"
+
+ Z08_ideas_3:0 "Bjarnrik Ideas 3"
+ Z08_ideas_3_start:0 "Bjarnrik Traditions 3"
+ Z08_ideas_3_bonus:0 "Bjarnrik Ambition 3"
+ Z08_idea_1_3:0 "Land of Fjords"
+ Z08_idea_1_3_desc:0 "Bjarnrik 1 desc"
+ Z08_idea_2_3:0 "Freemen Fervour"
+ Z08_idea_2_3_desc:0 "Bjarnrik 2 desc"
+ Z08_idea_3_3:0 "Valkyries and Skalds"
+ Z08_idea_3_3_desc:0 "Bjarnrik 3 desc"
+ Z08_idea_4_3:0 "Tithes and Tributes"
+ Z08_idea_4_3_desc:0 "Bjarnrik 4 desc"
+ Z08_idea_5_3:0 "End of Raiding"
+ Z08_idea_5_3_desc:0 "Bjarnrik 5 desc"
+ Z08_idea_6_3:0 "Merchantmen"
+ Z08_idea_6_3_desc:0 "Bjarnrik 6 desc"
+ Z08_idea_7_3:0 "Blackpowder Berserkers"
+ Z08_idea_7_3_desc:0 "Bjarnrik 7 desc"
+
+ Z10_ideas_1:0 "Revrhavn Ideas 1"
+ Z10_ideas_1_start:0 "Revrhavn Traditions 1"
+ Z10_ideas_1_bonus:0 "Revrhavn Ambition 1"
+ Z10_idea_1_1:0 "Reaver's Home"
+ Z10_idea_1_1_desc:0 "Revrhavn 1 desc"
+ Z10_idea_2_1:0 "Freemen Fervour"
+ Z10_idea_2_1_desc:0 "Revrhavn 2 desc"
+ Z10_idea_3_1:0 "Valkyries and Skalds"
+ Z10_idea_3_1_desc:0 "Revrhavn 3 desc"
+ Z10_idea_4_1:0 "Tithes and Tributes"
+ Z10_idea_4_1_desc:0 "Revrhavn 4 desc"
+ Z10_idea_5_1:0 "What the Bear sees not.."
+ Z10_idea_5_1_desc:0 "Revrhavn 5 desc"
+ Z10_idea_6_1:0 "Merchantmen"
+ Z10_idea_6_1_desc:0 "Revrhavn 6 desc"
+ Z10_idea_7_1:0 "Eager for Plunder"
+ Z10_idea_7_1_desc:0 "Revrhavn 7 desc"
+
+ Z10_ideas_2:0 "Revrhavn Ideas 2"
+ Z10_ideas_2_start:0 "Revrhavn Traditions 2"
+ Z10_ideas_2_bonus:0 "Revrhavn Ambition 2"
+ Z10_idea_1_2:0 "Reaver's Home"
+ Z10_idea_1_2_desc:0 "Revrhavn 1 desc"
+ Z10_idea_2_2:0 "Freemen Fervour"
+ Z10_idea_2_2_desc:0 "Revrhavn 2 desc"
+ Z10_idea_3_2:0 "Valkyries and Skalds"
+ Z10_idea_3_2_desc:0 "Revrhavn 3 desc"
+ Z10_idea_4_2:0 "Tithes and Tributes"
+ Z10_idea_4_2_desc:0 "Revrhavn 4 desc"
+ Z10_idea_5_2:0 "What the Bear sees not.."
+ Z10_idea_5_2_desc:0 "Revrhavn 5 desc"
+ Z10_idea_6_2:0 "Merchantmen"
+ Z10_idea_6_2_desc:0 "Revrhavn 6 desc"
+ Z10_idea_7_2:0 "Eager for Plunder"
+ Z10_idea_7_2_desc:0 "Revrhavn 7 desc"
+
+ Z10_ideas_3:0 "Revrhavn Ideas 3"
+ Z10_ideas_3_start:0 "Revrhavn Traditions 3"
+ Z10_ideas_3_bonus:0 "Revrhavn Ambition 3"
+ Z10_idea_1_3:0 "Reaver's Home"
+ Z10_idea_1_3_desc:0 "Revrhavn 1 desc"
+ Z10_idea_2_3:0 "Freemen Fervour"
+ Z10_idea_2_3_desc:0 "Revrhavn 2 desc"
+ Z10_idea_3_3:0 "Valkyries and Skalds"
+ Z10_idea_3_3_desc:0 "Revrhavn 3 desc"
+ Z10_idea_4_3:0 "Tithes and Tributes"
+ Z10_idea_4_3_desc:0 "Revrhavn 4 desc"
+ Z10_idea_5_3:0 "What the Bear sees not.."
+ Z10_idea_5_3_desc:0 "Revrhavn 5 desc"
+ Z10_idea_6_3:0 "Merchantmen"
+ Z10_idea_6_3_desc:0 "Revrhavn 6 desc"
+ Z10_idea_7_3:0 "Eager for Plunder"
+ Z10_idea_7_3_desc:0 "Revrhavn 7 desc"
+
+ Z11_ideas_1:0 "Sidaett Ideas 1"
+ Z11_ideas_1_start:0 "Sidaett Traditions 1"
+ Z11_ideas_1_bonus:0 "Sidaett Ambition 1"
+ Z11_idea_1_1:0 "Sidaetti Sensibilities"
+ Z11_idea_1_1_desc:0 "Sidaett 1 desc"
+ Z11_idea_2_1:0 "Freemen Fervour"
+ Z11_idea_2_1_desc:0 "Sidaett 2 desc"
+ Z11_idea_3_1:0 "Valkyries and Skalds"
+ Z11_idea_3_1_desc:0 "Sidaett 3 desc"
+ Z11_idea_4_1:0 "Tithes and Tributes"
+ Z11_idea_4_1_desc:0 "Sidaett 4 desc"
+ Z11_idea_5_1:0 "What the Bear sees not.."
+ Z11_idea_5_1_desc:0 "Sidaett 5 desc"
+ Z11_idea_6_1:0 "Merchantmen"
+ Z11_idea_6_1_desc:0 "Sidaett 6 desc"
+ Z11_idea_7_1:0 "Eager for Plunder"
+ Z11_idea_7_1_desc:0 "Sidaett 7 desc"
+
+ Z11_ideas_2:0 "Sidaett Ideas 2"
+ Z11_ideas_2_start:0 "Sidaett Traditions 2"
+ Z11_ideas_2_bonus:0 "Sidaett Ambition 2"
+ Z11_idea_1_2:0 "Sidaetti Sensibilities"
+ Z11_idea_1_2_desc:0 "Sidaett 1 desc"
+ Z11_idea_2_2:0 "Freemen Fervour"
+ Z11_idea_2_2_desc:0 "Sidaett 2 desc"
+ Z11_idea_3_2:0 "Valkyries and Skalds"
+ Z11_idea_3_2_desc:0 "Sidaett 3 desc"
+ Z11_idea_4_2:0 "Tithes and Tributes"
+ Z11_idea_4_2_desc:0 "Sidaett 4 desc"
+ Z11_idea_5_2:0 "What the Bear sees not.."
+ Z11_idea_5_2_desc:0 "Sidaett 5 desc"
+ Z11_idea_6_2:0 "Merchantmen"
+ Z11_idea_6_2_desc:0 "Sidaett 6 desc"
+ Z11_idea_7_2:0 "Eager for Plunder"
+ Z11_idea_7_2_desc:0 "Sidaett 7 desc"
+
+ Z11_ideas_3:0 "Sidaett Ideas 3"
+ Z11_ideas_3_start:0 "Sidaett Traditions 3"
+ Z11_ideas_3_bonus:0 "Sidaett Ambition 3"
+ Z11_idea_1_3:0 "Sidaetti Sensibilities"
+ Z11_idea_1_3_desc:0 "Sidaett 1 desc"
+ Z11_idea_2_3:0 "Freemen Fervour"
+ Z11_idea_2_3_desc:0 "Sidaett 2 desc"
+ Z11_idea_3_3:0 "Valkyries and Skalds"
+ Z11_idea_3_3_desc:0 "Sidaett 3 desc"
+ Z11_idea_4_3:0 "Tithes and Tributes"
+ Z11_idea_4_3_desc:0 "Sidaett 4 desc"
+ Z11_idea_5_3:0 "What the Bear sees not.."
+ Z11_idea_5_3_desc:0 "Sidaett 5 desc"
+ Z11_idea_6_3:0 "Merchantmen"
+ Z11_idea_6_3_desc:0 "Sidaett 6 desc"
+ Z11_idea_7_3:0 "Eager for Plunder"
+ Z11_idea_7_3_desc:0 "Sidaett 7 desc"
+
+ Z83_ideas_1:0 "Blodfjell Ideas 1"
+ Z83_ideas_1_start:0 "Blodfjell Traditions 1"
+ Z83_ideas_1_bonus:0 "Blodfjell Ambition 1"
+ Z83_idea_1_1:0 "Sons of the Cold, Heralds of Thaw"
+ Z83_idea_1_1_desc:0 "Blodfjell 1 desc"
+ Z83_idea_2_1:0 "Freemen Fervour"
+ Z83_idea_2_1_desc:0 "SBlodfjell 2 desc"
+ Z83_idea_3_1:0 "Valkyries and Skalds"
+ Z83_idea_3_1_desc:0 "Blodfjell 3 desc"
+ Z83_idea_4_1:0 "Tithes and Tributes"
+ Z83_idea_4_1_desc:0 "Blodfjell 4 desc"
+ Z83_idea_5_1:0 "What the Bear sees not.."
+ Z83_idea_5_1_desc:0 "Blodfjell 5 desc"
+ Z83_idea_6_1:0 "Merchantmen"
+ Z83_idea_6_1_desc:0 "Blodfjell 6 desc"
+ Z83_idea_7_1:0 "Eager for Plunder"
+ Z83_idea_7_1_desc:0 "Blodfjell 7 desc"
+
+ Z83_ideas_2:0 "Blodfjell Ideas 2"
+ Z83_ideas_2_start:0 "Blodfjell Traditions 2"
+ Z83_ideas_2_bonus:0 "Blodfjell Ambition 2"
+ Z83_idea_1_2:0 "Sons of the Cold, Heralds of Thaw"
+ Z83_idea_1_2_desc:0 "Blodfjell 1 desc"
+ Z83_idea_2_2:0 "Freemen Fervour"
+ Z83_idea_2_2_desc:0 "SBlodfjell 2 desc"
+ Z83_idea_3_2:0 "Valkyries and Skalds"
+ Z83_idea_3_2_desc:0 "Blodfjell 3 desc"
+ Z83_idea_4_2:0 "Tithes and Tributes"
+ Z83_idea_4_2_desc:0 "Blodfjell 4 desc"
+ Z83_idea_5_2:0 "What the Bear sees not.."
+ Z83_idea_5_2_desc:0 "Blodfjell 5 desc"
+ Z83_idea_6_2:0 "Merchantmen"
+ Z83_idea_6_2_desc:0 "Blodfjell 6 desc"
+ Z83_idea_7_2:0 "Eager for Plunder"
+ Z83_idea_7_2_desc:0 "Blodfjell 7 desc"
+
+ Z83_ideas_3:0 "Blodfjell Ideas 3"
+ Z83_ideas_3_start:0 "Blodfjell Traditions 3"
+ Z83_ideas_3_bonus:0 "Blodfjell Ambition 3"
+ Z83_idea_1_3:0 "Sons of the Cold, Heralds of Thaw"
+ Z83_idea_1_3_desc:0 "Blodfjell 1 desc"
+ Z83_idea_2_3:0 "Freemen Fervour"
+ Z83_idea_2_3_desc:0 "SBlodfjell 2 desc"
+ Z83_idea_3_3:0 "Valkyries and Skalds"
+ Z83_idea_3_3_desc:0 "Blodfjell 3 desc"
+ Z83_idea_4_3:0 "Tithes and Tributes"
+ Z83_idea_4_3_desc:0 "Blodfjell 4 desc"
+ Z83_idea_5_3:0 "What the Bear sees not.."
+ Z83_idea_5_3_desc:0 "Blodfjell 5 desc"
+ Z83_idea_6_3:0 "Merchantmen"
+ Z83_idea_6_3_desc:0 "Blodfjell 6 desc"
+ Z83_idea_7_3:0 "Eager for Plunder"
+ Z83_idea_7_3_desc:0 "Blodfjell 7 desc"
+
+ Z84_ideas_1:0 "Varheim Ideas 1"
+ Z84_ideas_1_start:0 "Varheim Traditions 1"
+ Z84_ideas_1_bonus:0 "Varheim Ambition 1"
+ Z84_idea_1_1:0 "Drasillburin Horses"
+ Z84_idea_1_1_desc:0 "Varheim 1 desc"
+ Z84_idea_2_1:0 "Freemen Fervour"
+ Z84_idea_2_1_desc:0 "Varheim 2 desc"
+ Z84_idea_3_1:0 "Valkyries and Skalds"
+ Z84_idea_3_1_desc:0 "Varheim 3 desc"
+ Z84_idea_4_1:0 "Tithes and Tributes"
+ Z84_idea_4_1_desc:0 "Varheim 4 desc"
+ Z84_idea_5_1:0 "What the Bear sees not.."
+ Z84_idea_5_1_desc:0 "Varheim 5 desc"
+ Z84_idea_6_1:0 "Merchantmen"
+ Z84_idea_6_1_desc:0 "Varheim 6 desc"
+ Z84_idea_7_1:0 "Eager for Plunder"
+ Z84_idea_7_1_desc:0 "Varheim 7 desc"
+
+ Z84_ideas_2:0 "Varheim Ideas 2"
+ Z84_ideas_2_start:0 "Varheim Traditions 2"
+ Z84_ideas_2_bonus:0 "Varheim Ambition 2"
+ Z84_idea_1_2:0 "Drasillburin Horses"
+ Z84_idea_1_2_desc:0 "Varheim 1 desc"
+ Z84_idea_2_2:0 "Freemen Fervour"
+ Z84_idea_2_2_desc:0 "Varheim 2 desc"
+ Z84_idea_3_2:0 "Valkyries and Skalds"
+ Z84_idea_3_2_desc:0 "Varheim 3 desc"
+ Z84_idea_4_2:0 "Tithes and Tributes"
+ Z84_idea_4_2_desc:0 "Varheim 4 desc"
+ Z84_idea_5_2:0 "What the Bear sees not.."
+ Z84_idea_5_2_desc:0 "Varheim 5 desc"
+ Z84_idea_6_2:0 "Merchantmen"
+ Z84_idea_6_2_desc:0 "Varheim 6 desc"
+ Z84_idea_7_2:0 "Eager for Plunder"
+ Z84_idea_7_2_desc:0 "Varheim 7 desc"
+
+ Z84_ideas_3:0 "Varheim Ideas 3"
+ Z84_ideas_3_start:0 "Varheim Traditions 3"
+ Z84_ideas_3_bonus:0 "Varheim Ambition 3"
+ Z84_idea_1_3:0 "Drasillburin Horses"
+ Z84_idea_1_3_desc:0 "Varheim 1 desc"
+ Z84_idea_2_3:0 "Freemen Fervour"
+ Z84_idea_2_3_desc:0 "Varheim 2 desc"
+ Z84_idea_3_3:0 "Valkyries and Skalds"
+ Z84_idea_3_3_desc:0 "Varheim 3 desc"
+ Z84_idea_4_3:0 "Tithes and Tributes"
+ Z84_idea_4_3_desc:0 "Varheim 4 desc"
+ Z84_idea_5_3:0 "What the Bear sees not.."
+ Z84_idea_5_3_desc:0 "Varheim 5 desc"
+ Z84_idea_6_3:0 "Merchantmen"
+ Z84_idea_6_3_desc:0 "Varheim 6 desc"
+ Z84_idea_7_3:0 "Eager for Plunder"
+ Z84_idea_7_3_desc:0 "Varheim 7 desc"
+
+ Z85_ideas_1:0 "Frostbrygja Ideas 1"
+ Z85_ideas_1_start:0 "Frostbrygja Traditions 1"
+ Z85_ideas_1_bonus:0 "Frostbrygja Ambition 1"
+ Z85_idea_1_1:0 "Hvhakzers Horses"
+ Z85_idea_1_1_desc:0 "Frostbrygja 1 desc"
+ Z85_idea_2_1:0 "Freemen Fervour"
+ Z85_idea_2_1_desc:0 "Frostbrygja 2 desc"
+ Z85_idea_3_1:0 "Valkyries and Skalds"
+ Z85_idea_3_1_desc:0 "Frostbrygja 3 desc"
+ Z85_idea_4_1:0 "Tithes and Tributes"
+ Z85_idea_4_1_desc:0 "Frostbrygja 4 desc"
+ Z85_idea_5_1:0 "What the Bear sees not.."
+ Z85_idea_5_1_desc:0 "Frostbrygja 5 desc"
+ Z85_idea_6_1:0 "Merchantmen"
+ Z85_idea_6_1_desc:0 "Frostbrygja 6 desc"
+ Z85_idea_7_1:0 "Eager for Plunder"
+ Z85_idea_7_1_desc:0 "Frostbrygja 7 desc"
+
+ Z85_ideas_2:0 "Frostbrygja Ideas 2"
+ Z85_ideas_2_start:0 "Frostbrygja Traditions 2"
+ Z85_ideas_2_bonus:0 "Frostbrygja Ambition 2"
+ Z85_idea_1_2:0 "Hvhakzers Horses"
+ Z85_idea_1_2_desc:0 "Frostbrygja 1 desc"
+ Z85_idea_2_2:0 "Freemen Fervour"
+ Z85_idea_2_2_desc:0 "Frostbrygja 2 desc"
+ Z85_idea_3_2:0 "Valkyries and Skalds"
+ Z85_idea_3_2_desc:0 "Frostbrygja 3 desc"
+ Z85_idea_4_2:0 "Tithes and Tributes"
+ Z85_idea_4_2_desc:0 "Frostbrygja 4 desc"
+ Z85_idea_5_2:0 "What the Bear sees not.."
+ Z85_idea_5_2_desc:0 "Frostbrygja 5 desc"
+ Z85_idea_6_2:0 "Merchantmen"
+ Z85_idea_6_2_desc:0 "Frostbrygja 6 desc"
+ Z85_idea_7_2:0 "Eager for Plunder"
+ Z85_idea_7_2_desc:0 "Frostbrygja 7 desc"
+
+ Z85_ideas_3:0 "Frostbrygja Ideas 3"
+ Z85_ideas_3_start:0 "Frostbrygja Traditions 3"
+ Z85_ideas_3_bonus:0 "Frostbrygja Ambition 3"
+ Z85_idea_1_3:0 "Hvhakzers Horses"
+ Z85_idea_1_3_desc:0 "Frostbrygja 1 desc"
+ Z85_idea_2_3:0 "Freemen Fervour"
+ Z85_idea_2_3_desc:0 "Frostbrygja 2 desc"
+ Z85_idea_3_3:0 "Valkyries and Skalds"
+ Z85_idea_3_3_desc:0 "Frostbrygja 3 desc"
+ Z85_idea_4_3:0 "Tithes and Tributes"
+ Z85_idea_4_3_desc:0 "Frostbrygja 4 desc"
+ Z85_idea_5_3:0 "What the Bear sees not.."
+ Z85_idea_5_3_desc:0 "Frostbrygja 5 desc"
+ Z85_idea_6_3:0 "Merchantmen"
+ Z85_idea_6_3_desc:0 "Frostbrygja 6 desc"
+ Z85_idea_7_3:0 "Eager for Plunder"
+ Z85_idea_7_3_desc:0 "Frostbrygja 7 desc"
+
+
