gerudian ideas - olavish

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -5998,4 +5998,147 @@
  Z85_idea_7_3:0 "Eager for Plunder"
  Z85_idea_7_3_desc:0 "Frostbrygja 7 desc"
 
+ Z09_ideas_2:0 "Skaldskola Ideas 2"
+ Z09_ideas_2_start:0 "Skaldskola Traditions 2"
+ Z09_ideas_2_bonus:0 "Skaldskola Ambition 2"
+ Z09_idea_1_2:0 "Last Stand of the Skaldic Guard"
+ Z09_idea_1_2_desc:0 "Skaldskola 1 desc"
+ Z09_idea_2_2:0 "Freemen Fervour"
+ Z09_idea_2_2_desc:0 "Skaldskola 2 desc"
+ Z09_idea_3_2:0 "Valkyries and Skalds"
+ Z09_idea_3_2_desc:0 "Skaldskola 3 desc"
+ Z09_idea_4_2:0 "Tithes and Tributes"
+ Z09_idea_4_2_desc:0 "Skaldskola 4 desc"
+ Z09_idea_5_2:0 "Skald-inspired Jarls"
+ Z09_idea_5_2_desc:0 "Skaldskola 5 desc"
+ Z09_idea_6_2:0 "Merchantmen"
+ Z09_idea_6_2_desc:0 "Skaldskola 6 desc"
+ Z09_idea_7_2:0 "Mountain Homes"
+ Z09_idea_7_2_desc:0 "Skaldskola 7 desc"
+
+ Z09_ideas_3:0 "Skaldskola Ideas 3"
+ Z09_ideas_3_start:0 "Skaldskola Traditions 3"
+ Z09_ideas_3_bonus:0 "Skaldskola Ambition 3"
+ Z09_idea_1_3:0 "Last Stand of the Skaldic Guard"
+ Z09_idea_1_3_desc:0 "Skaldskola 1 desc"
+ Z09_idea_2_3:0 "Freemen Fervour"
+ Z09_idea_2_3_desc:0 "Skaldskola 2 desc"
+ Z09_idea_3_3:0 "Valkyries and Skalds"
+ Z09_idea_3_3_desc:0 "Skaldskola 3 desc"
+ Z09_idea_4_3:0 "Tithes and Tributes"
+ Z09_idea_4_3_desc:0 "Skaldskola 4 desc"
+ Z09_idea_5_3:0 "Skald-inspired Jarls"
+ Z09_idea_5_3_desc:0 "Skaldskola 5 desc"
+ Z09_idea_6_3:0 "Merchantmen"
+ Z09_idea_6_3_desc:0 "Skaldskola 6 desc"
+ Z09_idea_7_3:0 "Mountain Homes"
+ Z09_idea_7_3_desc:0 "Skaldskola 7 desc"
+
+ Z13_ideas_2:0 "Redgarhavn Ideas 2"
+ Z13_ideas_2_start:0 "Redgarhavn Traditions 2"
+ Z13_ideas_2_bonus:0 "Redgarhavn Ambition 2"
+ Z13_idea_1_2:0 "Redgar Cruelheart"
+ Z13_idea_1_2_desc:0 "Redgarhavn 1 desc"
+ Z13_idea_2_2:0 "Freemen Fervour"
+ Z13_idea_2_2_desc:0 "Redgarhavn 2 desc"
+ Z13_idea_3_2:0 "Valkyries and Skalds"
+ Z13_idea_3_2_desc:0 "Redgarhavn 3 desc"
+ Z13_idea_4_2:0 "Tithes and Tributes"
+ Z13_idea_4_2_desc:0 "Redgarhavn 4 desc"
+ Z13_idea_5_2:0 "Skald-inspired Jarls"
+ Z13_idea_5_2_desc:0 "Redgarhavn 5 desc"
+ Z13_idea_6_2:0 "Merchantmen"
+ Z13_idea_6_2_desc:0 "Redgarhavn 6 desc"
+ Z13_idea_7_2:0 "Mountain Homes"
+ Z13_idea_7_2_desc:0 "Redgarhavn 7 desc"
+
+ Z13_ideas_3:0 "Redgarhavn Ideas 3"
+ Z13_ideas_3_start:0 "Redgarhavn Traditions 3"
+ Z13_ideas_3_bonus:0 "Redgarhavn Ambition 3"
+ Z13_idea_1_3:0 "Redgar Cruelheart"
+ Z13_idea_1_3_desc:0 "Redgarhavn 1 desc"
+ Z13_idea_2_3:0 "Freemen Fervour"
+ Z13_idea_2_3_desc:0 "Redgarhavn 2 desc"
+ Z13_idea_3_3:0 "Valkyries and Skalds"
+ Z13_idea_3_3_desc:0 "Redgarhavn 3 desc"
+ Z13_idea_4_3:0 "Tithes and Tributes"
+ Z13_idea_4_3_desc:0 "Redgarhavn 4 desc"
+ Z13_idea_5_3:0 "Skald-inspired Jarls"
+ Z13_idea_5_3_desc:0 "Redgarhavn 5 desc"
+ Z13_idea_6_3:0 "Merchantmen"
+ Z13_idea_6_3_desc:0 "Redgarhavn 6 desc"
+ Z13_idea_7_3:0 "Mountain Homes"
+ Z13_idea_7_3_desc:0 "Redgarhavn 7 desc"
+
+ Z14_ideas_2:0 "Avnkaup Ideas 2"
+ Z14_ideas_2_start:0 "Avnkaup Traditions 2"
+ Z14_ideas_2_bonus:0 "Avnkaup Ambition 2"
+ Z14_idea_1_2:0 "Troll-seekers"
+ Z14_idea_1_2_desc:0 "Avnkaup 1 desc"
+ Z14_idea_2_2:0 "Freemen Fervour"
+ Z14_idea_2_2_desc:0 "Avnkaup 2 desc"
+ Z14_idea_3_2:0 "Valkyries and Skalds"
+ Z14_idea_3_2_desc:0 "Avnkaup 3 desc"
+ Z14_idea_4_2:0 "Tithes and Tributes"
+ Z14_idea_4_2_desc:0 "Avnkaup 4 desc"
+ Z14_idea_5_2:0 "Skald-inspired Jarls"
+ Z14_idea_5_2_desc:0 "Avnkaup 5 desc"
+ Z14_idea_6_2:0 "Merchantmen"
+ Z14_idea_6_2_desc:0 "Avnkaup 6 desc"
+ Z14_idea_7_2:0 "Mountain Homes"
+ Z14_idea_7_2_desc:0 "Avnkaup 7 desc"
+
+ Z14_ideas_3:0 "Avnkaup Ideas 3"
+ Z14_ideas_3_start:0 "Avnkaup Traditions 3"
+ Z14_ideas_3_bonus:0 "Avnkaup Ambition 3"
+ Z14_idea_1_3:0 "Troll-seekers"
+ Z14_idea_1_3_desc:0 "Avnkaup 1 desc"
+ Z14_idea_2_3:0 "Freemen Fervour"
+ Z14_idea_2_3_desc:0 "Avnkaup 2 desc"
+ Z14_idea_3_3:0 "Valkyries and Skalds"
+ Z14_idea_3_3_desc:0 "Avnkaup 3 desc"
+ Z14_idea_4_3:0 "Tithes and Tributes"
+ Z14_idea_4_3_desc:0 "Avnkaup 4 desc"
+ Z14_idea_5_3:0 "Skald-inspired Jarls"
+ Z14_idea_5_3_desc:0 "Avnkaup 5 desc"
+ Z14_idea_6_3:0 "Merchantmen"
+ Z14_idea_6_3_desc:0 "Avnkaup 6 desc"
+ Z14_idea_7_3:0 "Mountain Homes"
+ Z14_idea_7_3_desc:0 "Avnkaup 7 desc"
+
+ Z12_ideas_2:0 "Naugsvol Ideas 2"
+ Z12_ideas_2_start:0 "Naugsvol Traditions 2"
+ Z12_ideas_2_bonus:0 "Naugsvol Ambition 2"
+ Z12_idea_1_2:0 "Warg-hunters"
+ Z12_idea_1_2_desc:0 "Naugsvol 1 desc"
+ Z12_idea_2_2:0 "Freemen Fervour"
+ Z12_idea_2_2_desc:0 "Naugsvol 2 desc"
+ Z12_idea_3_2:0 "Valkyries and Skalds"
+ Z12_idea_3_2_desc:0 "Naugsvol 3 desc"
+ Z12_idea_4_2:0 "Tithes and Tributes"
+ Z12_idea_4_2_desc:0 "Naugsvol 4 desc"
+ Z12_idea_5_2:0 "Skald-inspired Jarls"
+ Z12_idea_5_2_desc:0 "Naugsvol 5 desc"
+ Z12_idea_6_2:0 "Merchantmen"
+ Z12_idea_6_2_desc:0 "Naugsvol 6 desc"
+ Z12_idea_7_2:0 "Mountain Homes"
+ Z12_idea_7_2_desc:0 "Naugsvol 7 desc"
+
+ Z12_ideas_3:0 "Naugsvol Ideas 3"
+ Z12_ideas_3_start:0 "Naugsvol Traditions 3"
+ Z12_ideas_3_bonus:0 "Naugsvol Ambition 3"
+ Z12_idea_1_3:0 "Warg-hunters"
+ Z12_idea_1_3_desc:0 "Naugsvol 1 desc"
+ Z12_idea_2_3:0 "Freemen Fervour"
+ Z12_idea_2_3_desc:0 "Naugsvol 2 desc"
+ Z12_idea_3_3:0 "Valkyries and Skalds"
+ Z12_idea_3_3_desc:0 "Naugsvol 3 desc"
+ Z12_idea_4_3:0 "Tithes and Tributes"
+ Z12_idea_4_3_desc:0 "Naugsvol 4 desc"
+ Z12_idea_5_3:0 "Skald-inspired Jarls"
+ Z12_idea_5_3_desc:0 "Naugsvol 5 desc"
+ Z12_idea_6_3:0 "Merchantmen"
+ Z12_idea_6_3_desc:0 "Naugsvol 6 desc"
+ Z12_idea_7_3:0 "Mountain Homes"
+ Z12_idea_7_3_desc:0 "Naugsvol 7 desc"
 
