gerudian ideas - all the rest

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6142,3 +6142,183 @@
  Z12_idea_7_3:0 "Mountain Homes"
  Z12_idea_7_3_desc:0 "Naugsvol 7 desc"
 
+ Z15_ideas_2:0 "Urviksten Ideas 2"
+ Z15_ideas_2_start:0 "Urviksten Traditions 2"
+ Z15_ideas_2_bonus:0 "Urviksten Ambition 2"
+ Z15_idea_1_2:0 "Reclaiming the Name"
+ Z15_idea_1_2_desc:0 "Urviksten 1 desc"
+ Z15_idea_2_2:0 "Freemen Fervour"
+ Z15_idea_2_2_desc:0 "Urviksten 2 desc"
+ Z15_idea_3_2:0 "Valkyries and Skalds"
+ Z15_idea_3_2_desc:0 "Urviksten 3 desc"
+ Z15_idea_4_2:0 "Tithes and Tributes"
+ Z15_idea_4_2_desc:0 "Urviksten 4 desc"
+ Z15_idea_5_2:0 "Ebonsteel Legions"
+ Z15_idea_5_2_desc:0 "Urviksten 5 desc"
+ Z15_idea_6_2:0 "Merchantmen"
+ Z15_idea_6_2_desc:0 "Urviksten 6 desc"
+ Z15_idea_7_2:0 "Claims of Castanor"
+ Z15_idea_7_2_desc:0 "Urviksten 7 desc"
+
+ Z15_ideas_3:0 "Urviksten Ideas 3"
+ Z15_ideas_3_start:0 "Urviksten Traditions 3"
+ Z15_ideas_3_bonus:0 "Urviksten Ambition 3"
+ Z15_idea_1_3:0 "Reclaiming the Name"
+ Z15_idea_1_3_desc:0 "Urviksten 1 desc"
+ Z15_idea_2_3:0 "Freemen Fervour"
+ Z15_idea_2_3_desc:0 "Urviksten 2 desc"
+ Z15_idea_3_3:0 "Valkyries and Skalds"
+ Z15_idea_3_3_desc:0 "Urviksten 3 desc"
+ Z15_idea_4_3:0 "Tithes and Tributes"
+ Z15_idea_4_3_desc:0 "Urviksten 4 desc"
+ Z15_idea_5_3:0 "Ebonsteel Legions"
+ Z15_idea_5_3_desc:0 "Urviksten 5 desc"
+ Z15_idea_6_3:0 "Merchantmen"
+ Z15_idea_6_3_desc:0 "Urviksten 6 desc"
+ Z15_idea_7_3:0 "Claims of Castanor"
+ Z15_idea_7_3_desc:0 "Urviksten 7 desc"
+
+ W40_ideas_2:0 "Monthavn Ideas 2"
+ W40_ideas_2_start:0 "Monthavn Traditions 2"
+ W40_ideas_2_bonus:0 "Monthavn Ambition 2"
+ W40_idea_1_2:0 "Gerudia's Wall"
+ W40_idea_1_2_desc:0 "Monthavn 1 desc"
+ W40_idea_2_2:0 "Freemen Fervour"
+ W40_idea_2_2_desc:0 "Monthavn 2 desc"
+ W40_idea_3_2:0 "Valkyries and Skalds"
+ W40_idea_3_2_desc:0 "Monthavn 3 desc"
+ W40_idea_4_2:0 "Tithes and Tributes"
+ W40_idea_4_2_desc:0 "Monthavn 4 desc"
+ W40_idea_5_2:0 "Ebonsteel Legions"
+ W40_idea_5_2_desc:0 "Monthavn 5 desc"
+ W40_idea_6_2:0 "Merchantmen"
+ W40_idea_6_2_desc:0 "Monthavn 6 desc"
+ W40_idea_7_2:0 "Claims of Castanor"
+ W40_idea_7_2_desc:0 "Monthavn 7 desc"
+
+ W40_ideas_3:0 "Monthavn Ideas 3"
+ W40_ideas_3_start:0 "Monthavn Traditions 3"
+ W40_ideas_3_bonus:0 "Monthavn Ambition 3"
+ W40_idea_1_3:0 "Gerudia's Wall"
+ W40_idea_1_3_desc:0 "Monthavn 1 desc"
+ W40_idea_2_3:0 "Freemen Fervour"
+ W40_idea_2_3_desc:0 "Monthavn 2 desc"
+ W40_idea_3_3:0 "Valkyries and Skalds"
+ W40_idea_3_3_desc:0 "Monthavn 3 desc"
+ W40_idea_4_3:0 "Tithes and Tributes"
+ W40_idea_4_3_desc:0 "Monthavn 4 desc"
+ W40_idea_5_3:0 "Ebonsteel Legions"
+ W40_idea_5_3_desc:0 "Monthavn 5 desc"
+ W40_idea_6_3:0 "Merchantmen"
+ W40_idea_6_3_desc:0 "Monthavn 6 desc"
+ W40_idea_7_3:0 "Claims of Castanor"
+ W40_idea_7_3_desc:0 "Monthavn 7 desc"
+
+ Z16_ideas_3:0 "Olavlund Ideas 3"
+ Z16_ideas_3_start:0 "Olavlund Traditions 3"
+ Z16_ideas_3_bonus:0 "Olavlund Ambition 3"
+ Z16_idea_1_3:0 "Titanic Guard"
+ Z16_idea_1_3_desc:0 "Olavlund 1 desc"
+ Z16_idea_2_3:0 "Freemen Fervour"
+ Z16_idea_2_3_desc:0 "Olavlund 2 desc"
+ Z16_idea_3_3:0 "Taming the Frost"
+ Z16_idea_3_3_desc:0 "Olavlund 3 desc"
+ Z16_idea_4_3:0 "Tithes and Tributes"
+ Z16_idea_4_3_desc:0 "Olavlund 4 desc"
+ Z16_idea_5_3:0 "Elkaesal's Guardian"
+ Z16_idea_5_3_desc:0 "Olavlund 5 desc"
+ Z16_idea_6_3:0 "Merchantmen"
+ Z16_idea_6_3_desc:0 "Olavlund 6 desc"
+ Z16_idea_7_3:0 "Unending Supply of Timber"
+ Z16_idea_7_3_desc:0 "Olavlund 7 desc"
+
+ A05_ideas_2:0 "Reveria Ideas 2"
+ A05_ideas_2_start:0 "Reveria Traditions 2"
+ A05_ideas_2_bonus:0 "Reveria Ambition 2"
+ A05_idea_1_2:0 "The Portroy Agreement"
+ A05_idea_1_2_desc:0 "Reveria 1 desc"
+ A05_idea_2_2:0 "Freemen Fervour"
+ A05_idea_2_2_desc:0 "Reveria 2 desc"
+ A05_idea_3_2:0 "Poleaxe Mastery"
+ A05_idea_3_2_desc:0 "Reveria 3 desc"
+ A05_idea_4_2:0 "Tithes and Tributes"
+ A05_idea_4_2_desc:0 "Reveria 4 desc"
+ A05_idea_5_2:0 "Gnomish Intelligentsia"
+ A05_idea_5_2_desc:0 "Reveria 5 desc"
+ A05_idea_6_2:0 "Merchantmen"
+ A05_idea_6_2_desc:0 "Reveria 6 desc"
+ A05_idea_7_2:0 "Second Age of Reavers"
+ A05_idea_7_2_desc:0 "Reveria 7 desc"
+
+ A05_ideas_3:0 "Reveria Ideas 3"
+ A05_ideas_3_start:0 "Reveria Traditions 3"
+ A05_ideas_3_bonus:0 "Reveria Ambition 3"
+ A05_idea_1_3:0 "The Portroy Agreement"
+ A05_idea_1_3_desc:0 "Reveria 1 desc"
+ A05_idea_2_3:0 "Freemen Fervour"
+ A05_idea_2_3_desc:0 "Reveria 2 desc"
+ A05_idea_3_3:0 "Poleaxe Mastery"
+ A05_idea_3_3_desc:0 "Reveria 3 desc"
+ A05_idea_4_3:0 "Tithes and Tributes"
+ A05_idea_4_3_desc:0 "Reveria 4 desc"
+ A05_idea_5_3:0 "Gnomish Intelligentsia"
+ A05_idea_5_3_desc:0 "Reveria 5 desc"
+ A05_idea_6_3:0 "Merchantmen"
+ A05_idea_6_3_desc:0 "Reveria 6 desc"
+ A05_idea_7_3:0 "Second Age of Reavers"
+ A05_idea_7_3_desc:0 "Reveria 7 desc"
+
+ A11_ideas_2:0 "Pearlsedge Ideas 2"
+ A11_ideas_2_start:0 "Pearlsedge Traditions 2"
+ A11_ideas_2_bonus:0 "Pearlsedge Ambition 2"
+ A11_idea_1_2:0 "Sons Henrik Divenscourge"
+ A11_idea_1_2_desc:0 "Pearlsedge 1 desc"
+ A11_idea_2_2:0 "Freemen Fervour"
+ A11_idea_2_2_desc:0 "Pearlsedge 2 desc"
+ A11_idea_3_2:0 "High Seas Heritage"
+ A11_idea_3_2_desc:0 "Pearlsedge 3 desc"
+ A11_idea_4_2:0 "Tithes and Tributes"
+ A11_idea_4_2_desc:0 "Pearlsedge 4 desc"
+ A11_idea_5_2:0 "Tollmasters"
+ A11_idea_5_2_desc:0 "Pearlsedge 5 desc"
+ A11_idea_6_2:0 "Merchantmen"
+ A11_idea_6_2_desc:0 "Pearlsedge 6 desc"
+ A11_idea_7_2:0 "Regent Court Redoubt"
+ A11_idea_7_2_desc:0 "Pearlsedge 7 desc"
+
+ A11_ideas_3:0 "Pearlsedge Ideas 3"
+ A11_ideas_3_start:0 "Pearlsedge Traditions 3"
+ A11_ideas_3_bonus:0 "Pearlsedge Ambition 3"
+ A11_idea_1_3:0 "Sons Henrik Divenscourge"
+ A11_idea_1_3_desc:0 "Pearlsedge 1 desc"
+ A11_idea_2_3:0 "Freemen Fervour"
+ A11_idea_2_3_desc:0 "Pearlsedge 2 desc"
+ A11_idea_3_3:0 "High Seas Heritage"
+ A11_idea_3_3_desc:0 "Pearlsedge 3 desc"
+ A11_idea_4_3:0 "Tithes and Tributes"
+ A11_idea_4_3_desc:0 "Pearlsedge 4 desc"
+ A11_idea_5_3:0 "Tollmasters"
+ A11_idea_5_3_desc:0 "Pearlsedge 5 desc"
+ A11_idea_6_3:0 "Merchantmen"
+ A11_idea_6_3_desc:0 "Pearlsedge 6 desc"
+ A11_idea_7_3:0 "Regent Court Redoubt"
+ A11_idea_7_3_desc:0 "Pearlsedge 7 desc"
+
+ Z34_ideas_3:0 "Black Castanor Ideas 3"
+ Z34_ideas_3_start:0 "Black Castanor Traditions 3"
+ Z34_ideas_3_bonus:0 "Black Castanor Ambition 3"
+ Z34_idea_1_3:0 "Conqueror of Escann"
+ Z34_idea_1_3_desc:0 "Black Castanor 1 desc"
+ Z34_idea_2_3:0 "Freemen Fervour"
+ Z34_idea_2_3_desc:0 "Black Castanor 2 desc"
+ Z34_idea_3_3:0 "Ebonfrost's Fist"
+ Z34_idea_3_3_desc:0 "Black Castanor 3 desc"
+ Z34_idea_4_3:0 "Tithes and Tributes"
+ Z34_idea_4_3_desc:0 "Black Castanor 4 desc"
+ Z34_idea_5_3:0 "Ebonsteel Foundry"
+ Z34_idea_5_3_desc:0 "Black Castanor 5 desc"
+ Z34_idea_6_3:0 "Merchantmen"
+ Z34_idea_6_3_desc:0 "Black Castanor 6 desc"
+ Z34_idea_7_3:0 "Black Reaver Academy"
+ Z34_idea_7_3_desc:0 "Black Castanor 7 desc"
+
