--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6322,3 +6322,110 @@
  Z34_idea_7_3:0 "Black Reaver Academy"
  Z34_idea_7_3_desc:0 "Black Castanor 7 desc"
 
+ Z88_ideas_1:0 "Vaengheim Ideas 1"
+ Z88_ideas_1_start:0 "Vaengheim Traditions 1"
+ Z88_ideas_1_bonus:0 "Vaengheim Ambition 1"
+ Z88_idea_1_1:0 "Healing Wings"
+ Z88_idea_1_1_desc:0 "Vaengheim 1 desc"
+ Z88_idea_2_1:0 "Necessity breeds efficacy"
+ Z88_idea_2_1_desc:0 "Vaengheim 2 desc"
+ Z88_idea_3_1:0 "Troll-hunters"
+ Z88_idea_3_1_desc:0 "Vaengheim 3 desc"
+ Z88_idea_4_1:0 "Advanced Negotiating Techniques"
+ Z88_idea_4_1_desc:0 "Vaengheim 4 desc"
+ Z88_idea_5_1:0 "Saga's Fury"
+ Z88_idea_5_1_desc:0 "Vaengheim 5 desc"
+ Z88_idea_6_1:0 "Foreign Input"
+ Z88_idea_6_1_desc:0 "Vaengheim 6 desc"
+ Z88_idea_7_1:0 "Sky-Forges"
+ Z88_idea_7_1_desc:0 "Vaengheim 7 desc"
+
+ Z88_ideas_2:0 "Vaengheim Ideas 2"
+ Z88_ideas_2_start:0 "Vaengheim Traditions 2"
+ Z88_ideas_2_bonus:0 "Vaengheim Ambition 2"
+ Z88_idea_1_2:0 "Healing Wings"
+ Z88_idea_1_2_desc:0 "Vaengheim 1 desc"
+ Z88_idea_2_2:0 "Necessity breeds efficacy"
+ Z88_idea_2_2_desc:0 "Vaengheim 2 desc"
+ Z88_idea_3_2:0 "Troll-hunters"
+ Z88_idea_3_2_desc:0 "Vaengheim 3 desc"
+ Z88_idea_4_2:0 "Advanced Negotiating Techniques"
+ Z88_idea_4_2_desc:0 "Vaengheim 4 desc"
+ Z88_idea_5_2:0 "Saga's Fury"
+ Z88_idea_5_2_desc:0 "Vaengheim 5 desc"
+ Z88_idea_6_2:0 "Foreign Input"
+ Z88_idea_6_2_desc:0 "Vaengheim 6 desc"
+ Z88_idea_7_2:0 "Sky-Forges"
+ Z88_idea_7_2_desc:0 "Vaengheim 7 desc"
+
+ Z88_ideas_3:0 "Vaengheim Ideas 3"
+ Z88_ideas_3_start:0 "Vaengheim Traditions 3"
+ Z88_ideas_3_bonus:0 "Vaengheim Ambition 3"
+ Z88_idea_1_3:0 "Healing Wings"
+ Z88_idea_1_3_desc:0 "Vaengheim 1 desc"
+ Z88_idea_2_3:0 "Necessity breeds efficacy"
+ Z88_idea_2_3_desc:0 "Vaengheim 2 desc"
+ Z88_idea_3_3:0 "Troll-hunters"
+ Z88_idea_3_3_desc:0 "Vaengheim 3 desc"
+ Z88_idea_4_3:0 "Advanced Negotiating Techniques"
+ Z88_idea_4_3_desc:0 "Vaengheim 4 desc"
+ Z88_idea_5_3:0 "Saga's Fury"
+ Z88_idea_5_3_desc:0 "Vaengheim 5 desc"
+ Z88_idea_6_3:0 "Foreign Input"
+ Z88_idea_6_3_desc:0 "Vaengheim 6 desc"
+ Z88_idea_7_3:0 "Sky-Forges"
+ Z88_idea_7_3_desc:0 "Vaengheim 7 desc"
+
+ W38_ideas_1:0 "Vaenrheim Ideas 1"
+ W38_ideas_1_start:0 "Vaenrheim Traditions 1"
+ W38_ideas_1_bonus:0 "Vaenrheim Ambition 1"
+ W38_idea_1_1:0 "Gerudian Guard"
+ W38_idea_1_1_desc:0 "Vaenrheim 1 desc"
+ W38_idea_2_1:0 "Necessity breeds efficacy"
+ W38_idea_2_1_desc:0 "Vaenrheim 2 desc"
+ W38_idea_3_1:0 "Chivalrous Nights"
+ W38_idea_3_1_desc:0 "Vaenrheim 3 desc"
+ W38_idea_4_1:0 "Advanced Negotiating Techniques"
+ W38_idea_4_1_desc:0 "Vaenrheim 4 desc"
+ W38_idea_5_1:0 "Escanni Scholars, Gerudian Skalds, Harpy Roosts"
+ W38_idea_5_1_desc:0 "Vaenrheim 5 desc"
+ W38_idea_6_1:0 "Foreign Input"
+ W38_idea_6_1_desc:0 "Vaenrheim 6 desc"
+ W38_idea_7_1:0 "Northern Serenades"
+ W38_idea_7_1_desc:0 "Vaenrheim 7 desc"
+
+ W38_ideas_2:0 "Vaenrheim Ideas 2"
+ W38_ideas_2_start:0 "Vaenrheim Traditions 2"
+ W38_ideas_2_bonus:0 "Vaenrheim Ambition 2"
+ W38_idea_1_2:0 "Gerudian Guard"
+ W38_idea_1_2_desc:0 "Vaenrheim 1 desc"
+ W38_idea_2_2:0 "Necessity breeds efficacy"
+ W38_idea_2_2_desc:0 "Vaenrheim 2 desc"
+ W38_idea_3_2:0 "Chivalrous Nights"
+ W38_idea_3_2_desc:0 "Vaenrheim 3 desc"
+ W38_idea_4_2:0 "Advanced Negotiating Techniques"
+ W38_idea_4_2_desc:0 "Vaenrheim 4 desc"
+ W38_idea_5_2:0 "Escanni Scholars, Gerudian Skalds, Harpy Roosts"
+ W38_idea_5_2_desc:0 "Vaenrheim 5 desc"
+ W38_idea_6_2:0 "Foreign Input"
+ W38_idea_6_2_desc:0 "Vaenrheim 6 desc"
+ W38_idea_7_2:0 "Northern Serenades"
+ W38_idea_7_2_desc:0 "Vaenrheim 7 desc"
+
+ W38_ideas_3:0 "Vaenrheim Ideas 3"
+ W38_ideas_3_start:0 "Vaenrheim Traditions 3"
+ W38_ideas_3_bonus:0 "Vaenrheim Ambition 3"
+ W38_idea_1_3:0 "Gerudian Guard"
+ W38_idea_1_3_desc:0 "Vaenrheim 1 desc"
+ W38_idea_2_3:0 "Necessity breeds efficacy"
+ W38_idea_2_3_desc:0 "Vaenrheim 2 desc"
+ W38_idea_3_3:0 "Chivalrous Nights"
+ W38_idea_3_3_desc:0 "Vaenrheim 3 desc"
+ W38_idea_4_3:0 "Advanced Negotiating Techniques"
+ W38_idea_4_3_desc:0 "Vaenrheim 4 desc"
+ W38_idea_5_3:0 "Escanni Scholars, Gerudian Skalds, Harpy Roosts"
+ W38_idea_5_3_desc:0 "Vaenrheim 5 desc"
+ W38_idea_6_3:0 "Foreign Input"
+ W38_idea_6_3_desc:0 "Vaenrheim 6 desc"
+ W38_idea_7_3:0 "Northern Serenades"
+ W38_idea_7_3_desc:0 "Vaenrheim 7 desc"
