Farrani + grey orc fix

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6429,3 +6429,186 @@
  W38_idea_6_3_desc:0 "Vaenrheim 6 desc"
  W38_idea_7_3:0 "Northern Serenades"
  W38_idea_7_3_desc:0 "Vaenrheim 7 desc"
+
+
+ Z18_ideas_2:0 "Frozenmaw Ideas 2"
+ Z18_ideas_2_start:0 "Frozenmaw Traditions 1"
+ Z18_ideas_2_bonus:0 "Frozenmaw Ambition 1"
+ Z18_idea_1_2:0 "Tribute Warriors"
+ Z18_idea_1_2_desc:0 "Frozenmaw 1 desc"
+ Z18_idea_2_2:0 "Orcish Nation-Building"
+ Z18_idea_2_2_desc:0 "Frozenmaw 2 desc"
+ Z18_idea_3_2:0 "Steel Orcs"
+ Z18_idea_3_2_desc:0 "Frozenmaw 3 desc"
+ Z18_idea_4_2:0 "The Endless Greentide"
+ Z18_idea_4_2_desc:0 "Frozenmaw 4 desc"
+ Z18_idea_5_2:0 "Taming Humans, Harpies, Dwarves"
+ Z18_idea_5_2_desc:0 "Frozenmaw 5 desc"
+ Z18_idea_6_2:0 "Vice Grip Administration"
+ Z18_idea_6_2_desc:0 "Frozenmaw 6 desc"
+ Z18_idea_7_2:0 "Mastering Shipcraft"
+ Z18_idea_7_2_desc:0 "Frozenmaw 7 desc"
+
+Z18_ideas_3:0 "Frozenmaw Ideas 3"
+ Z18_ideas_3_start:0 "Frozenmaw Traditions 1"
+ Z18_ideas_3_bonus:0 "Frozenmaw Ambition 1"
+ Z18_idea_1_3:0 "Tribute Warriors"
+ Z18_idea_1_3_desc:0 "Frozenmaw 1 desc"
+ Z18_idea_2_3:0 "Orcish Nation-Building"
+ Z18_idea_2_3_desc:0 "Frozenmaw 2 desc"
+ Z18_idea_3_3:0 "Steel Orcs"
+ Z18_idea_3_3_desc:0 "Frozenmaw 3 desc"
+ Z18_idea_4_3:0 "The Endless Greentide"
+ Z18_idea_4_3_desc:0 "Frozenmaw 4 desc"
+ Z18_idea_5_3:0 "Taming Humans, Harpies, Dwarves"
+ Z18_idea_5_3_desc:0 "Frozenmaw 5 desc"
+ Z18_idea_6_3:0 "Vice Grip Administration"
+ Z18_idea_6_3_desc:0 "Frozenmaw 6 desc"
+ Z18_idea_7_3:0 "Mastering Shipcraft"
+ Z18_idea_7_3_desc:0 "Frozenmaw 7 desc"
+
+
+Z19_ideas_2:0 "Broken Jaw Ideas 2"
+ Z19_ideas_2_start:0 "Broken Jaw Traditions 1"
+ Z19_ideas_2_bonus:0 "Broken Jaw Ambition 1"
+ Z19_idea_1_2:0 "Remembering the Betrayal"
+ Z19_idea_1_2_desc:0 "Broken Jaw 1 desc"
+ Z19_idea_2_2:0 "Orcish Nation-Building"
+ Z19_idea_2_2_desc:0 "Broken Jaw 2 desc"
+ Z19_idea_3_2:0 "Steel Orcs"
+ Z19_idea_3_2_desc:0 "Broken Jaw 3 desc"
+ Z19_idea_4_2:0 "The Endless Greentide"
+ Z19_idea_4_2_desc:0 "Broken Jaw 4 desc"
+ Z19_idea_5_2:0 "Taming Humans, Harpies, Dwarves"
+ Z19_idea_5_2_desc:0 "Broken Jaw 5 desc"
+ Z19_idea_6_2:0 "Vice Grip Administration"
+ Z19_idea_6_2_desc:0 "Broken Jaw 6 desc"
+ Z19_idea_7_2:0 "Mastering Shipcraft"
+ Z19_idea_7_2_desc:0 "Broken Jaw 7 desc"
+
+Z19_ideas_3:0 "Broken Jaw Ideas 3"
+ Z19_ideas_3_start:0 "Broken Jaw Traditions 1"
+ Z19_ideas_3_bonus:0 "Broken Jaw Ambition 1"
+ Z19_idea_1_3:0 "Remembering the Betrayal"
+ Z19_idea_1_3_desc:0 "Broken Jaw 1 desc"
+ Z19_idea_2_3:0 "Orcish Nation-Building"
+ Z19_idea_2_3_desc:0 "Broken Jaw 2 desc"
+ Z19_idea_3_3:0 "Steel Orcs"
+ Z19_idea_3_3_desc:0 "Broken Jaw 3 desc"
+ Z19_idea_4_3:0 "The Endless Greentide"
+ Z19_idea_4_3_desc:0 "Broken Jaw 4 desc"
+ Z19_idea_5_3:0 "Taming Humans, Harpies, Dwarves"
+ Z19_idea_5_3_desc:0 "Broken Jaw 5 desc"
+ Z19_idea_6_3:0 "Vice Grip Administration"
+ Z19_idea_6_3_desc:0 "Broken Jaw 6 desc"
+ Z19_idea_7_3:0 "Mastering Shipcraft"
+ Z19_idea_7_3_desc:0 "Broken Jaw 7 desc"
+
+
+Z47_ideas_2:0 "Doombringer Ideas 2"
+ Z47_ideas_2_start:0 "Doombringer Traditions 1"
+ Z47_ideas_2_bonus:0 "Doombringer Ambition 1"
+ Z47_idea_1_2:0 "Doom Shamans"
+ Z47_idea_1_2_desc:0 "Doombringer1 desc"
+ Z47_idea_2_2:0 "Orcish Nation-Building"
+ Z47_idea_2_2_desc:0 "Doombringer 2 desc"
+ Z47_idea_3_2:0 "Steel Orcs"
+ Z47_idea_3_2_desc:0 "Doombringer 3 desc"
+ Z47_idea_4_2:0 "The Endless Greentide"
+ Z47_idea_4_2_desc:0 "Doombringer 4 desc"
+ Z47_idea_5_2:0 "Taming Humans, Harpies, Dwarves"
+ Z47_idea_5_2_desc:0 "Doombringer 5 desc"
+ Z47_idea_6_2:0 "Vice Grip Administration"
+ Z47_idea_6_2_desc:0 "Doombringer 6 desc"
+ Z47_idea_7_2:0 "Mastering Shipcraft"
+ Z47_idea_7_2_desc:0 "Doombringer 7 desc"
+
+Z47_ideas_3:0 "Doombringer Ideas 3"
+ Z47_ideas_3_start:0 "Doombringer Traditions 1"
+ Z47_ideas_3_bonus:0 "Doombringer Ambition 1"
+ Z47_idea_1_3:0 "Doom Shamans"
+ Z47_idea_1_3_desc:0 "Doombringer1 desc"
+ Z47_idea_2_3:0 "Orcish Nation-Building"
+ Z47_idea_2_3_desc:0 "Doombringer 2 desc"
+ Z47_idea_3_3:0 "Steel Orcs"
+ Z47_idea_3_3_desc:0 "Doombringer 3 desc"
+ Z47_idea_4_3:0 "The Endless Greentide"
+ Z47_idea_4_3_desc:0 "Doombringer 4 desc"
+ Z47_idea_5_3:0 "Taming Humans, Harpies, Dwarves"
+ Z47_idea_5_3_desc:0 "Doombringer 5 desc"
+ Z47_idea_6_3:0 "Vice Grip Administration"
+ Z47_idea_6_3_desc:0 "Doombringer 6 desc"
+ Z47_idea_7_3:0 "Mastering Shipcraft"
+ Z47_idea_7_3_desc:0 "Doombringer 7 desc"
+
+Z50_ideas_3:0 "Grombar Ideas 3"
+ Z50_ideas_3_start:0 "Grombar Traditions 1"
+ Z50_ideas_3_bonus:0 "Grombar Ambition 1"
+ Z50_idea_1_3:0 "Lessons of the Graytide"
+ Z50_idea_1_3_desc:0 "Grombar desc"
+ Z50_idea_2_3:0 "Orcish Nation-Building"
+ Z50_idea_2_3_desc:0 "Grombar 2 desc"
+ Z50_idea_3_3:0 "Steel Orcs"
+ Z50_idea_3_3_desc:0 "Grombar 3 desc"
+ Z50_idea_4_3:0 "The Endless Greentide"
+ Z50_idea_4_3_desc:0 "Grombar 4 desc"
+ Z50_idea_5_3:0 "Taming Humans, Harpies, Dwarves"
+ Z50_idea_5_3_desc:0 "Grombar 5 desc"
+ Z50_idea_6_3:0 "Vice Grip Administration"
+ Z50_idea_6_3_desc:0 "Grombar 6 desc"
+ Z50_idea_7_3:0 "Mastering Shipcraft"
+ Z50_idea_7_3_desc:0 "Grombar 7 desc"
+
+ W01_ideas_1:0 "Farrani Ideas 1"
+ W01_ideas_1_start:0 "Farrani Traditions 1"
+ W01_ideas_1_bonus:0 "Farrani Ambition 1"
+ W01_idea_1_1:0 "Home Once Lost"
+ W01_idea_1_1_desc:0 "Farrani 1 desc"
+ W01_idea_2_1:0 "Border-Moving Duels"
+ W01_idea_2_1_desc:0 "Farrani 2 desc"
+ W01_idea_3_1:0 "Pulling Out Weeds"
+ W01_idea_3_1_desc:0 "Farrani 3 desc"
+ W01_idea_4_1:0 "Humanity's Heart"
+ W01_idea_4_1_desc:0 "Farrani 4 desc"
+ W01_idea_5_1:0 "Adra's Adventurer Admirers"
+ W01_idea_5_1_desc:0 "Farrani 5 desc"
+ W01_idea_6_1:0 "Survive and Prosper"
+ W01_idea_6_1_desc:0 "Farrani 6 desc"
+ W01_idea_7_1:0 "Shadow Tree Watch"
+ W01_idea_7_1_desc:0 "Farrani 7 desc"
+
+ B60_ideas_2:0 "Farrani Ideas 1"
+ B60_ideas_2_start:0 "Farrani Traditions 1"
+ B60_ideas_2_bonus:0 "Farrani Ambition 1"
+ B60_idea_1_2:0 "Home Once Lost"
+ B60_idea_1_2_desc:0 "Farrani 1 desc"
+ B60_idea_2_2:0 "Border-Moving Duels"
+ B60_idea_2_2_desc:0 "Farrani 2 desc"
+ B60_idea_3_2:0 "Pulling Out Weeds"
+ B60_idea_3_2_desc:0 "Farrani 3 desc"
+ B60_idea_4_2:0 "Humanity's Heart"
+ B60_idea_4_2_desc:0 "Farrani 4 desc"
+ B60_idea_5_2:0 "Adra's Adventurer Admirers"
+ B60_idea_5_2_desc:0 "Farrani 5 desc"
+ B60_idea_6_2:0 "Survive and Prosper"
+ B60_idea_6_2_desc:0 "Farrani 6 desc"
+ B60_idea_7_2:0 "Shadow Tree Watch"
+ B60_idea_7_2_desc:0 "Farrani 7 desc"
+
+ B60_ideas_3:0 "Farrani Ideas 1"
+ B60_ideas_3_start:0 "Farrani Traditions 1"
+ B60_ideas_3_bonus:0 "Farrani Ambition 1"
+ B60_idea_1_3:0 "Home Once Lost"
+ B60_idea_1_3_desc:0 "Farrani 1 desc"
+ B60_idea_2_3:0 "Border-Moving Duels"
+ B60_idea_2_3_desc:0 "Farrani 2 desc"
+ B60_idea_3_3:0 "Pulling Out Weeds"
+ B60_idea_3_3_desc:0 "Farrani 3 desc"
+ B60_idea_4_3:0 "Humanity's Heart"
+ B60_idea_4_3_desc:0 "Farrani 4 desc"
+ B60_idea_5_3:0 "Adra's Adventurer Admirers"
+ B60_idea_5_3_desc:0 "Farrani 5 desc"
+ B60_idea_6_3:0 "Survive and Prosper"
+ B60_idea_6_3_desc:0 "Farrani 6 desc"
+ B60_idea_7_3:0 "Shadow Tree Watch"
+ B60_idea_7_3_desc:0 "Farrani 7 desc"
