half orcish grombar

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6559,6 +6559,24 @@ Z50_ideas_3:0 "Grombar Ideas 3"
  Z50_idea_7_3:0 "Mastering Shipcraft"
  Z50_idea_7_3_desc:0 "Grombar 7 desc"
 
+HZ50_ideas_3:0 "Grombar Ideas 3"
+ HZ50_ideas_3_start:0 "Grombar Traditions 1"
+ HZ50_ideas_3_bonus:0 "Grombar Ambition 1"
+ HZ50_idea_1_3:0 "Lessons of the Graytide"
+ HZ50_idea_1_3_desc:0 "Grombar desc"
+ HZ50_idea_2_3:0 "Border-Moving Duels"
+ HZ50_idea_2_3_desc:0 "Grombar 2 desc"
+ HZ50_idea_3_3:0 "Steel Orcs"
+ HZ50_idea_3_3_desc:0 "Grombar 3 desc"
+ HZ50_idea_4_3:0 "Humanity's Heart"
+ HZ50_idea_4_3_desc:0 "Grombar 4 desc"
+ HZ50_idea_5_3:0 "Taming Humans, Harpies, Dwarves"
+ HZ50_idea_5_3_desc:0 "Grombar 5 desc"
+ HZ50_idea_6_3:0 "Survive and Prosper"
+ HZ50_idea_6_3_desc:0 "Grombar 6 desc"
+ HZ50_idea_7_3:0 "Mastering Shipcraft"
+ HZ50_idea_7_3_desc:0 "Grombar 7 desc"
+
  W01_ideas_1:0 "Farrani Ideas 1"
  W01_ideas_1_start:0 "Farrani Traditions 1"
  W01_ideas_1_bonus:0 "Farrani Ambition 1"
