--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -3,6 +3,11 @@
  cot_lilac_recovery:0 "Lilac War Recovery" #startup innit
  cot_lilac_recovery_desc:0 "The Lilac wars were brutal beyond belief and our people's cry for relief from the bloodshed has been heard. Now is a time of peace, mourning, and recovery."
  deruwren_circles:0 "Deruwren Circles"
+ cot_misc_events.12.t:0 "Northern Songs"
+ cot_misc_events.12.d:0 "Skalds sing of fierce and majestic beings that call the furthest reaches of ice-claimed north their own home. Creatures of such majesty and might that bend ice and snow to their will, that are unaffected by deepest freeze. Creatures such as we."
+ cot_misc_events.12.a:0 "Let them sing songs of us."
+ geru_cot_snow_dev:0 "Arctic Living"
+ geru_cot_snow_dev_desc:0 "Certain species and cultures are so adept at living amongst the frost and snow that the arctic climate has little effect on them."
 
  building_regimental_camp_desc: "§TFor every §Y10 development§! in this province this building gives additional: §Y\nLand Force Limit: +0.25§! \n§!\n"
 
