--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6595,7 +6595,7 @@ Z50_ideas_3h:0 "Grombar Ideas 3"
  W01_idea_7_1:0 "Shadow Tree Watch"
  W01_idea_7_1_desc:0 "Farrani 7 desc"
 
- B60_ideas_2:0 "Farrani Ideas 1"
+ B60_ideas_2:0 "Farrani Ideas 2"
  B60_ideas_2_start:0 "Farrani Traditions 1"
  B60_ideas_2_bonus:0 "Farrani Ambition 1"
  B60_idea_1_2:0 "Home Once Lost"
@@ -6613,7 +6613,7 @@ Z50_ideas_3h:0 "Grombar Ideas 3"
  B60_idea_7_2:0 "Shadow Tree Watch"
  B60_idea_7_2_desc:0 "Farrani 7 desc"
 
- B60_ideas_3:0 "Farrani Ideas 1"
+ B60_ideas_3:0 "Farrani Ideas 3"
  B60_ideas_3_start:0 "Farrani Traditions 1"
  B60_ideas_3_bonus:0 "Farrani Ambition 1"
  B60_idea_1_3:0 "Home Once Lost"
@@ -6630,3 +6630,327 @@ Z50_ideas_3h:0 "Grombar Ideas 3"
  B60_idea_6_3_desc:0 "Farrani 6 desc"
  B60_idea_7_3:0 "Shadow Tree Watch"
  B60_idea_7_3_desc:0 "Farrani 7 desc"
+
+ A36_ideas_2:0 "Derwinger Ideas 2"
+ A36_ideas_2_start:0 "Derwinger Traditions 1"
+ A36_ideas_2_bonus:0 "Derwinger Ambition 1"
+ A36_idea_1_2:0 "Morbanite Chargers"
+ A36_idea_1_2_desc:0 "Derwinger 1 desc"
+ A36_idea_2_2:0 "Edge and Bulwark"
+ A36_idea_2_2_desc:0 "Derwinger 2 desc"
+ A36_idea_3_2:0 "The Northern Marches"
+ A36_idea_3_2_desc:0 "Derwinger 3 desc"
+ A36_idea_4_2:0 "Local Markets"
+ A36_idea_4_2_desc:0 "Derwinger 4 desc"
+ A36_idea_5_2:0 "Halfblood Policy"
+ A36_idea_5_2_desc:0 ""
+ A36_idea_6_2:0 "Steady Skirmishes"
+ A36_idea_6_2_desc:0 "Derwinger 6 desc"
+ A36_idea_7_2:0 "Against All Evil"
+ A36_idea_7_2_desc:0 "Derwinger 7 desc"
+
+ A36_ideas_3:0 "Derwinger Ideas 3"
+ A36_ideas_3_start:0 "Derwinger Traditions 1"
+ A36_ideas_3_bonus:0 "Derwinger Ambition 1"
+ A36_idea_1_3:0 "Morbanite Chargers"
+ A36_idea_1_3_desc:0 "Derwinger 1 desc"
+ A36_idea_2_3:0 "Edge and Bulwark"
+ A36_idea_2_3_desc:0 "Derwinger 2 desc"
+ A36_idea_3_3:0 "The Northern Marches"
+ A36_idea_3_3_desc:0 "Derwinger 3 desc"
+ A36_idea_4_3:0 "Local Markets"
+ A36_idea_4_3_desc:0 "Derwinger 4 desc"
+ A36_idea_5_3:0 "Halfblood Policy"
+ A36_idea_5_3_desc:0 ""
+ A36_idea_6_3:0 "Steady Skirmishes"
+ A36_idea_6_3_desc:0 "Derwinger 6 desc"
+ A36_idea_7_3:0 "Against All Evil"
+ A36_idea_7_3_desc:0 "Derwinger 7 desc"
+
+ A46_ideas_2:0 "Arbarani Ideas 2"
+ A46_ideas_2_start:0 "Arbarani Traditions 1"
+ A46_ideas_2_bonus:0 "Arbarani Ambition 1"
+ A46_idea_1_2:0 "Meeting Place of the Free"
+ A46_idea_1_2_desc:0 "Arbarani 1 desc"
+ A46_idea_2_2:0 "Edge and Bulwark"
+ A46_idea_2_2_desc:0 "Arbarani 2 desc"
+ A46_idea_3_2:0 "The Northern Marches"
+ A46_idea_3_2_desc:0 "Arbarani 3 desc"
+ A46_idea_4_2:0 "Local Markets"
+ A46_idea_4_2_desc:0 "Arbarani 4 desc"
+ A46_idea_5_2:0 "Weakest Horsemeat Enjoyers"
+ A46_idea_5_2_desc:0 "Arbarani 5 desc"
+ A46_idea_6_2:0 "Steady Skirmishes"
+ A46_idea_6_2_desc:0 "Arbarani 6 desc"
+ A46_idea_7_2:0 "Against All Evil"
+ A46_idea_7_2_desc:0 "Arbarani 7 desc"
+
+ A46_ideas_3:0 "Arbarani Ideas 3"
+ A46_ideas_3_start:0 "Arbarani Traditions 1"
+ A46_ideas_3_bonus:0 "Arbarani Ambition 1"
+ A46_idea_1_3:0 "Meeting Place of the Free"
+ A46_idea_1_3_desc:0 "Arbarani 1 desc"
+ A46_idea_2_3:0 "Edge and Bulwark"
+ A46_idea_2_3_desc:0 "Arbarani 2 desc"
+ A46_idea_3_3:0 "The Northern Marches"
+ A46_idea_3_3_desc:0 "Arbarani 3 desc"
+ A46_idea_4_3:0 "Local Markets"
+ A46_idea_4_3_desc:0 "Arbarani 4 desc"
+ A46_idea_5_3:0 "Weakest Horsemeat Enjoyers"
+ A46_idea_5_3_desc:0 "Arbarani 5 desc"
+ A46_idea_6_3:0 "Steady Skirmishes"
+ A46_idea_6_3_desc:0 "Arbarani 6 desc"
+ A46_idea_7_3:0 "Against All Evil"
+ A46_idea_7_3_desc:0 "Arbarani 7 desc"
+
+ A77_ideas_2:0 "Orda Aldresia Ideas 2"
+ A77_ideas_2_start:0 "Orda Aldresia Traditions 1"
+ A77_ideas_2_bonus:0 "Orda Aldresia Ambition 1"
+ A77_idea_1_2:0 "Pan-Cannorian Cast"
+ A77_idea_1_2_desc:0 "Orda Aldresia 1 desc"
+ A77_idea_2_2:0 "Edge and Bulwark"
+ A77_idea_2_2_desc:0 "Orda Aldresia 2 desc"
+ A77_idea_3_2:0 "With Magic and Sword"
+ A77_idea_3_2_desc:0 "Orda Aldresia 3 desc"
+ A77_idea_4_2:0 "Local Markets"
+ A77_idea_4_2_desc:0 "Orda Aldresia 4 desc"
+ A77_idea_5_2:0 "Mass Mage Shields"
+ A77_idea_5_2_desc:0 "Orda Aldresia 5 desc"
+ A77_idea_6_2:0 "Steady Skirmishes"
+ A77_idea_6_2_desc:0 "Orda Aldresia 6 desc"
+ A77_idea_7_2:0 "Mixed Blood"
+ A77_idea_7_2_desc:0 "Orda Aldresia 7 desc"
+
+ A77_ideas_3:0 "Orda Aldresia Ideas 3"
+ A77_ideas_3_start:0 "Orda Aldresia Traditions 1"
+ A77_ideas_3_bonus:0 "Orda Aldresia Ambition 1"
+ A77_idea_1_3:0 "Pan-Cannorian Cast"
+ A77_idea_1_3_desc:0 "Orda Aldresia 1 desc"
+ A77_idea_2_3:0 "Edge and Bulwark"
+ A77_idea_2_3_desc:0 "Orda Aldresia 2 desc"
+ A77_idea_3_3:0 "With Magic and Sword"
+ A77_idea_3_3_desc:0 "Orda Aldresia 3 desc"
+ A77_idea_4_3:0 "Local Markets"
+ A77_idea_4_3_desc:0 "Orda Aldresia 4 desc"
+ A77_idea_5_3:0 "Mass Mage Shields"
+ A77_idea_5_3_desc:0 "Orda Aldresia 5 desc"
+ A77_idea_6_3:0 "Steady Skirmishes"
+ A77_idea_6_3_desc:0 "Orda Aldresia 6 desc"
+ A77_idea_7_3:0 "Mixed Blood"
+ A77_idea_7_3_desc:0 "Orda Aldresia 7 desc"
+
+ A60_ideas_2:0 "Asheniande Ideas 2"
+ A60_ideas_2_start:0 "Asheniande Traditions 1"
+ A60_ideas_2_bonus:0 "Asheniande Ambition 1"
+ A60_idea_1_2:0 "Folk of Aldresia"
+ A60_idea_1_2_desc:0 "Asheniande 1 desc"
+ A60_idea_2_2:0 "Edge and Bulwark"
+ A60_idea_2_2_desc:0 "Asheniande 2 desc"
+ A60_idea_3_2:0 "With Magic and Sword"
+ A60_idea_3_2_desc:0 "Asheniande 3 desc"
+ A60_idea_4_2:0 "Local Markets"
+ A60_idea_4_2_desc:0 "Asheniande 4 desc"
+ A60_idea_5_2:0 "Ravensbane, Foiling Follies"
+ A60_idea_5_2_desc:0 "Asheniande 5 desc"
+ A60_idea_6_2:0 "Steady Skirmishes"
+ A60_idea_6_2_desc:0 "Asheniande 6 desc"
+ A60_idea_7_2:0 "Mixed Blood"
+ A60_idea_7_2_desc:0 "Asheniande 7 desc"
+
+ A60_ideas_3:0 "Asheniande Ideas 3"
+ A60_ideas_3_start:0 "Asheniande Traditions 1"
+ A60_ideas_3_bonus:0 "Asheniande Ambition 1"
+ A60_idea_1_3:0 "Folk of Aldresia"
+ A60_idea_1_3_desc:0 "Asheniande 1 desc"
+ A60_idea_2_3:0 "Edge and Bulwark"
+ A60_idea_2_3_desc:0 "Asheniande 2 desc"
+ A60_idea_3_3:0 "With Magic and Sword"
+ A60_idea_3_3_desc:0 "Asheniande 3 desc"
+ A60_idea_4_3:0 "Local Markets"
+ A60_idea_4_3_desc:0 "Asheniande 4 desc"
+ A60_idea_5_3:0 "Ravensbane, Foiling Follies"
+ A60_idea_5_3_desc:0 "Asheniande 5 desc"
+ A60_idea_6_3:0 "Steady Skirmishes"
+ A60_idea_6_3_desc:0 "Asheniande 6 desc"
+ A60_idea_7_3:0 "Mixed Blood"
+ A60_idea_7_3_desc:0 "Asheniande 7 desc"
+
+B20_ideas_2:0 "Iron Scepter Ideas 2"
+ B20_ideas_2_start:0 "Iron Scepter Ideas Traditions 1"
+ B20_ideas_2_bonus:0 "Iron Scepter Ideas Ambition 1"
+ B20_idea_1_2:0 "Folk of Aldresia"
+ B20_idea_1_2_desc:0 "Iron Scepter Ideas 1 desc"
+ B20_idea_2_2:0 "Magic Without a Leash"
+ B20_idea_2_2_desc:0 "Iron Scepter Ideas 2 desc"
+ B20_idea_3_2:0 "With Magic and Sword"
+ B20_idea_3_2_desc:0 "Iron Scepter Ideas 3 desc"
+ B20_idea_4_2:0 "Local Markets"
+ B20_idea_4_2_desc:0 "Iron Scepter Ideas 4 desc"
+ B20_idea_5_2:0 "Innovative Necromancy"
+ B20_idea_5_2_desc:0 "Iron Scepter Ideas 5 desc"
+ B20_idea_6_2:0 "Steady Skirmishes"
+ B20_idea_6_2_desc:0 "Iron Scepter Ideas 6 desc"
+ B20_idea_7_2:0 "Mixed Blood"
+ B20_idea_7_2_desc:0 "Iron Scepter Ideas 7 desc"
+
+B20_ideas_3:0 "Iron Scepter Ideas 3"
+ B20_ideas_3_start:0 "Iron Scepter Ideas Traditions 1"
+ B20_ideas_3_bonus:0 "Iron Scepter Ideas Ambition 1"
+ B20_idea_1_3:0 "Folk of Aldresia"
+ B20_idea_1_3_desc:0 "Iron Scepter Ideas 1 desc"
+ B20_idea_2_3:0 "Magic Without a Leash"
+ B20_idea_2_3_desc:0 "Iron Scepter Ideas 2 desc"
+ B20_idea_3_3:0 "With Magic and Sword"
+ B20_idea_3_3_desc:0 "Iron Scepter Ideas 3 desc"
+ B20_idea_4_3:0 "Local Markets"
+ B20_idea_4_3_desc:0 "Iron Scepter Ideas 4 desc"
+ B20_idea_5_3:0 "Innovative Necromancy"
+ B20_idea_5_3_desc:0 "Iron Scepter Ideas 5 desc"
+ B20_idea_6_3:0 "Steady Skirmishes"
+ B20_idea_6_3_desc:0 "Iron Scepter Ideas 6 desc"
+ B20_idea_7_3:0 "Mixed Blood"
+ B20_idea_7_3_desc:0 "Iron Scepter Ideas 7 desc"
+
+B20_ideas_1:0 "Iron Scepter Ideas 1"
+ B20_ideas_1_start:0 "Iron Scepter Ideas Traditions 1"
+ B20_ideas_1_bonus:0 "Iron Scepter Ideas Ambition 1"
+ B20_idea_1_1:0 "Folk of Aldresia"
+ B20_idea_1_1_desc:0 "Iron Scepter Ideas 1 desc"
+ B20_idea_2_1:0 "Magic Without a Leash"
+ B20_idea_2_1_desc:0 "Iron Scepter Ideas 2 desc"
+ B20_idea_3_1:0 "With Magic and Sword"
+ B20_idea_3_1_desc:0 "Iron Scepter Ideas 3 desc"
+ B20_idea_4_1:0 "Local Markets"
+ B20_idea_4_1_desc:0 "Iron Scepter Ideas 4 desc"
+ B20_idea_5_1:0 "Innovative Necromancy"
+ B20_idea_5_1_desc:0 "Iron Scepter Ideas 5 desc"
+ B20_idea_6_1:0 "Steady Skirmishes"
+ B20_idea_6_1_desc:0 "Iron Scepter Ideas 6 desc"
+ B20_idea_7_1:0 "Mixed Blood"
+ B20_idea_7_1_desc:0 "Iron Scepter Ideas 7 desc"
+
+ A75_ideas_3:0 "Gisden Ideas 3"
+ A75_ideas_3_start:0 "Gisden Traditions 1"
+ A75_ideas_3_bonus:0 "Gisden Ambition 1"
+ A75_idea_1_3:0 "Freed by the Rose"
+ A75_idea_1_3_desc:0 "Gisden 1 desc"
+ A75_idea_2_3:0 "Edge and Bulwark"
+ A75_idea_2_3_desc:0 "Gisden 2 desc"
+ A75_idea_3_3:0 "Beneficial Benevolence"
+ A75_idea_3_3_desc:0 "Gisden 3 desc"
+ A75_idea_4_3:0 "Local Markets"
+ A75_idea_4_3_desc:0 "Gisden 4 desc"
+ A75_idea_5_3:0 "Unbreakable Spirit"
+ A75_idea_5_3_desc:0 "Gisden 5 desc"
+ A75_idea_6_3:0 "Steady Skirmishes"
+ A75_idea_6_3_desc:0 "Gisden 6 desc"
+ A75_idea_7_3:0 "Merit-based Statecraft"
+ A75_idea_7_3_desc:0 "Gisden 7 desc"
+
+ A75_ideas_2:0 "Gisden Ideas 2"
+ A75_ideas_2_start:0 "Gisden Traditions 1"
+ A75_ideas_2_bonus:0 "Gisden Ambition 1"
+ A75_idea_1_2:0 "Freed by the Rose"
+ A75_idea_1_2_desc:0 "Gisden 1 desc"
+ A75_idea_2_2:0 "Edge and Bulwark"
+ A75_idea_2_2_desc:0 "Gisden 2 desc"
+ A75_idea_3_2:0 "Beneficial Benevolence"
+ A75_idea_3_2_desc:0 "Gisden 3 desc"
+ A75_idea_4_2:0 "Local Markets"
+ A75_idea_4_2_desc:0 "Gisden 4 desc"
+ A75_idea_5_2:0 "Unbreakable Spirit"
+ A75_idea_5_2_desc:0 "Gisden 5 desc"
+ A75_idea_6_2:0 "Steady Skirmishes"
+ A75_idea_6_2_desc:0 "Gisden 6 desc"
+ A75_idea_7_2:0 "Merit-based Statecraft"
+ A75_idea_7_2_desc:0 "Gisden 7 desc"
+
+ A72_ideas_2:0 "Arannen Ideas 2"
+ A72_ideas_2_start:0 "Arannen Traditions 1"
+ A72_ideas_2_bonus:0 "Arannen Ambition 1"
+ A72_idea_1_2:0 "The Salt Lion"
+ A72_idea_1_2_desc:0 "Arannen 1 desc"
+ A72_idea_2_2:0 "Edge and Bulwark"
+ A72_idea_2_2_desc:0 "Arannen 2 desc"
+ A72_idea_3_2:0 "Beneficial Benevolence"
+ A72_idea_3_2_desc:0 "Arannen 3 desc"
+ A72_idea_4_2:0 "Local Markets"
+ A72_idea_4_2_desc:0 "Arannen 4 desc"
+ A72_idea_5_2:0 "Delicious Rations"
+ A72_idea_5_2_desc:0 "Arannen 5 desc"
+ A72_idea_6_2:0 "Steady Skirmishes"
+ A72_idea_6_2_desc:0 "Arannen 6 desc"
+ A72_idea_7_2:0 "Merit-based Statecraft"
+ A72_idea_7_2_desc:0 "Arannen 7 desc"
+
+ A72_ideas_3:0 "Arannen Ideas 3"
+ A72_ideas_3_start:0 "Arannen Traditions 1"
+ A72_ideas_3_bonus:0 "Arannen Ambition 1"
+ A72_idea_1_3:0 "The Salt Lion"
+ A72_idea_1_3_desc:0 "Arannen 1 desc"
+ A72_idea_2_3:0 "Edge and Bulwark"
+ A72_idea_2_3_desc:0 "Arannen 2 desc"
+ A72_idea_3_3:0 "Beneficial Benevolence"
+ A72_idea_3_3_desc:0 "Arannen 3 desc"
+ A72_idea_4_3:0 "Local Markets"
+ A72_idea_4_3_desc:0 "Arannen 4 desc"
+ A72_idea_5_3:0 "Delicious Rations"
+ A72_idea_5_3_desc:0 "Arannen 5 desc"
+ A72_idea_6_3:0 "Steady Skirmishes"
+ A72_idea_6_3_desc:0 "Arannen 6 desc"
+ A72_idea_7_3:0 "Merit-based Statecraft"
+ A72_idea_7_3_desc:0 "Arannen 7 desc"
+
+ Z06_ideas_2:0 "Brinkmarches Ideas 2"
+ Z06_ideas_2_start:0 "Brinkmarches Traditions 1"
+ Z06_ideas_2_bonus:0 "Brinkmarches Ambition 1"
+ Z06_idea_1_2:0 "Bright Against Darkness"
+ Z06_idea_1_2_desc:0 "Brinkmarches 1 desc"
+ Z06_idea_2_2:0 "Edge and Bulwark"
+ Z06_idea_2_2_desc:0 "Brinkmarches 2 desc"
+ Z06_idea_3_2:0 "Beneficial Benevolence"
+ Z06_idea_3_2_desc:0 "Brinkmarches 3 desc"
+ Z06_idea_4_2:0 "Local Markets"
+ Z06_idea_4_2_desc:0 "Brinkmarches 4 desc"
+ Z06_idea_5_2:0 "Never Drink and Brink"
+ Z06_idea_5_2_desc:0 "Brinkmarches 5 desc"
+ Z06_idea_6_2:0 "Steady Skirmishes"
+ Z06_idea_6_2_desc:0 "Brinkmarches 6 desc"
+ Z06_idea_7_2:0 "Merit-based Statecraft"
+ Z06_idea_7_2_desc:0 "Brinkmarches 7 desc"
+
+ Z06_ideas_3:0 "Brinkmarches Ideas 3"
+ Z06_ideas_3_start:0 "Brinkmarches Traditions 1"
+ Z06_ideas_3_bonus:0 "Brinkmarches Ambition 1"
+ Z06_idea_1_3:0 "Bright Against Darkness"
+ Z06_idea_1_3_desc:0 "Brinkmarches 1 desc"
+ Z06_idea_2_3:0 "Edge and Bulwark"
+ Z06_idea_2_3_desc:0 "Brinkmarches 2 desc"
+ Z06_idea_3_3:0 "Beneficial Benevolence"
+ Z06_idea_3_3_desc:0 "Brinkmarches 3 desc"
+ Z06_idea_4_3:0 "Local Markets"
+ Z06_idea_4_3_desc:0 "Brinkmarches 4 desc"
+ Z06_idea_5_3:0 "Never Drink and Brink"
+ Z06_idea_5_3_desc:0 "Brinkmarches 5 desc"
+ Z06_idea_6_3:0 "Steady Skirmishes"
+ Z06_idea_6_3_desc:0 "Brinkmarches 6 desc"
+ Z06_idea_7_3:0 "Merit-based Statecraft"
+ Z06_idea_7_3_desc:0 "Brinkmarches 7 desc"
+
+ W30_ideas_3:0 "Arannor Ideas 3"
+ W30_ideas_3_start:0 "Arannor Traditions 1"
+ W30_ideas_3_bonus:0 "Arannor Ambition 1"
+ W30_idea_1_3:0 "Best of the Borders"
+ W30_idea_1_3_desc:0 "Arannor 1 desc"
+ W30_idea_2_3:0 "Edge and Bulwark"
+ W30_idea_2_3_desc:0 "Arannor 2 desc"
+ W30_idea_3_3:0 "Beneficial Benevolence"
+ W30_idea_3_3_desc:0 "Arannor 3 desc"
+ W30_idea_4_3:0 "Local Markets"
+ W30_idea_4_3_desc:0 "Arannor 4 desc"
+ W30_idea_5_3:0 "A New Giant Wakes"
+ W30_idea_5_3_desc:0 "Arannor 5 desc"
+ W30_idea_6_3:0 "Steady Skirmishes"
+ W30_idea_6_3_desc:0 "Arannor 6 desc"
+ W30_idea_7_3:0 "Merit-based Statecraft"
+ W30_idea_7_3_desc:0 "Arannor 7 desc"
