--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -4,11 +4,11 @@
  W00_ADJ:0 "Flamemarked"
  W01:0 "Farrani Host"
  W01_ADJ:0 "Farranean"
- W02:0 "Moreced WIP"
- W02_ADJ:0 "Moreceder"
+ W02:0 "Moreced"
+ W02_ADJ:0 "Cedian"
  W03:0 "Rohibon's Finest"
- W03_ADJ:0 "Adenner"
- W04:0 "Adenner WIP"
+ W03_ADJ:0 "Rohibonic"
+ W04:0 "Adenner Host"
  W04_ADJ:0 "Adenner"
  W05:0 "Camdrean Company"
  W05_ADJ:0 "Camdrean"
@@ -20,7 +20,7 @@
  W08_ADJ:0 "Sapphire"
  W09:0 "Esswyck"
  W09_ADJ:0 "Esswycker"
- W10:0 "Castellyrian WIP"
+ W10:0 "Castellyrian Host"
  W10_ADJ:0 "Castellyrian"
  W11:0 "Orda Dameris"
  W11_ADJ:0 "Order-Damerian"
